--- a/vpc.yaml
+++ b/vpc.yaml
@@ -8,7 +8,37 @@ Resources:
       CidrBlock: '172.16.0.0/16'
       EnableDnsSupport: 'true'
       EnableDnsHostnames: 'true'
-      tags:
-        - Key: 'Name'
-          Value: 'clvpc'
-        
+      Tags:
+        - Key: Name
+          Value: clvpc
+
+  clsubneta:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+      VpcId: !Ref clvpc
+      CidrBlock: '172.16.1.0/24'
+      AvailabilityZone: !Select [0, !GetAzs '']
+      MapPublicIpOnLaunch: 'true'
+      Tags:
+        - Key: Name
+          Value: clsubneta
+
+    AppPrivateSubnetA:
+      type: 'AWS:EC2::SUBNET'
+      Properties:
+        VPcId: !Ref clvpc
+        CidrBlock: '172.16.2.0/24'
+        AvailabitiyZone: !Select [0, !GetAzs '']
+         Tags:
+          - Key: Name
+            Value: AppPrivateSubnetA
+
+    DataPrivateSubnetA:
+    Type: 'AWS::EC2::Subnet'
+    Prperties:
+    VPcId: !Ref clvpc
+    CidrBlock: '172.16.3.0/24'
+    AvailabilityZone: !Select [0, !GetAzs '']
+    Tags:
+    - Key: Name
+      Value: DataPrivateSubnetA        
